# hsndfile

./: .gitignore  .travis.yml  C2HS.hs  CHANGELOG.md  ChangeLog.md  Main.hs  README.md  Setup.hs  hsndfile.cabal  sndfile.cabal  stack.yaml
Sound/File/: Sndfile.hs
Sound/File/Sndfile/: Buffer.hs  Enumerator.hs  Exception.hs  Interface.chs
Sound/File/Sndfile/Buffer/: IOCArray.hs  Internal.hs  ST.hs  Sample.hs  Storable.hs
Sound/File/Sndfile/Wrapped/: StorableVector.hs  Vector.hs
Sound/Files/: Sndfile.chs  Sndfile.hs
Sound/Files/Sndfile/: Buffer.hs  Interface.chs
Sound/Files/Sndfile/Buffer/: Storable.hs
examples/: interact.hs  normalize.hs
tools/: posthook
