name:                   hsndfile
version:                0.4.0
category:               Data, Sound
license:                GPL
license-file:           COPYING
copyright:              Stefan Kersten, 2007-2009
author:                 Stefan Kersten
maintainer:             Stefan Kersten <sk@k-hornz.de>
stability:              Experimental
homepage:               http://haskell.org/haskellwiki/Hsndfile
synopsis:               Haskell bindings for libsndfile
description:            Haskell bindings for libsndfile.
                        .
                        libsndfile is a comprehensive C library for reading
                        and writing a large number of soundfile formats:
                        <http://www.mega-nerd.com/libsndfile/>.
tested-with:            GHC==6.8.*, GHC==6.10.1, GHC==6.10.4
build-type:             Simple
cabal-version:          >= 1.2

extra-source-files:
                        ChangeLog.md
                        README.md
                        libsndfile/sndfile.h

library
  build-depends:        array,
                        base >= 4 && < 5,
                        haskell98,
                        iteratee >= 0.3,
                        ListLike,
                        storablevector,
                        vector
  build-tools:          c2hs >= 0.15
  extensions:           DeriveDataTypeable
                        ExistentialQuantification
                        FlexibleContexts
                        ForeignFunctionInterface
                        MultiParamTypeClasses
                        TypeFamilies
  exposed-modules:      Sound.File.Sndfile
                        Sound.File.Sndfile.Wrapped.StorableVector
                        Sound.File.Sndfile.Wrapped.Vector
  other-modules:        C2HS
                        Sound.File.Sndfile.Buffer
                        Sound.File.Sndfile.Buffer.Internal
                        Sound.File.Sndfile.Buffer.Sample
                        Sound.File.Sndfile.Enumerator
                        Sound.File.Sndfile.Exception
                        Sound.File.Sndfile.Interface
  ghc-options:          -Wall -fno-warn-name-shadowing
  extra-libraries:      sndfile
  if os(windows)
    include-dirs:       libsndfile

source-repository head
  type:             darcs
  location:         http://code.haskell.org/hsndfile
