name:                   sndfile
version:                0.1
license:                GPL
copyright:              Stefan Kersten, 2007
author:                 Stefan Kersten
maintainer:             sk@k-hornz.de
stability:              Experimental
homepage:               http://darcs.k-hornz.de/cgi-bin/darcsweb.cgi?r=hsndfile;a=summary
synopsis:               Haskell bindings for libsndfile
description:            Haskell bindings for libsndfile
tested-with:            GHC
build-depends:          array, base, haskell98
exposed-modules:        Sound.Files.Sndfile
other-modules:          C2HS,
			Sound.Files.Sndfile.Buffer,
			Sound.Files.Sndfile.Buffer.Storable,
			Sound.Files.Sndfile.Interface
ghc-options:            -Wall -O
extra-libraries:	sndfile

executable:             sndfile-test
main-is:                Main.hs
--other-modules:		Sound.Files.Sndfile
ghc-options:            -Wall -O
extra-libraries:	sndfile
hs-source-dirs:		., dist/build
